Add Time and Date Picker fragments, reorganize creation activity

--- a/mobile/src/main/res/layout/activity_creation.xml
+++ b/mobile/src/main/res/layout/activity_creation.xml
@@ -10,24 +10,29 @@
         android:id="@+id/AddTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/TitleAjout"
-        tools:layout_editor_absoluteY="16dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:text="@string/TitleAjout"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.502" />
 
     <ImageView
         android:id="@+id/TitreImg"
-        android:layout_width="30dp"
-        android:layout_height="29dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddTitle"
-        app:srcCompat="@android:drawable/ic_menu_help" />
+        app:srcCompat="@android:drawable/ic_menu_help"
+        android:layout_marginLeft="16dp"
+        android:contentDescription=""/>
 
     <EditText
         android:id="@+id/NameEdit"
@@ -47,19 +52,19 @@
 
     <ImageView
         android:id="@+id/typeImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="41dp"
         app:srcCompat="@android:drawable/ic_menu_manage"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/NameEdit"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Spinner
         android:id="@+id/typeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/NameEdit"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -68,13 +73,14 @@
 
     <ImageView
         android:id="@+id/descImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="42dp"
+        android:layout_height="38dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:layout_marginLeft="16dp" />
 
     <EditText
         android:id="@+id/descEdit"
@@ -82,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Description"
@@ -93,24 +99,78 @@
 
     <ImageView
         android:id="@+id/dateImg"
-        android:layout_width="34dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="43dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="35dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@+id/descEdit"
         app:srcCompat="@android:drawable/ic_menu_agenda"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <TextView
+        android:id="@+id/dateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Date"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toRightOf="@+id/dateImg"
+        app:layout_constraintRight_toLeftOf="@+id/datePickButton"
+        app:layout_constraintHorizontal_bias="0.607"
+        android:onClick="showDatePickerDialog"
+        app:layout_constraintBottom_toBottomOf="@+id/dateImg"
+        android:layout_marginBottom="8dp" />
+
+    <Button
+        android:id="@+id/datePickButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:text="Choisir"
+        app:layout_constraintTop_toBottomOf="@+id/descEdit"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="showDatePickerDialog"/>
+
     <ImageView
         android:id="@+id/timeImg"
-        android:layout_width="37dp"
-        android:layout_height="32dp"
+        android:layout_width="43dp"
+        android:layout_height="39dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateImg"
-        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/dateImg" />
+
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Heure"
+        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@+id/timePickButton"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/timeImg"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.626"
+        android:onClick="showTimePickerDialog"
+        app:layout_constraintBottom_toBottomOf="@+id/timeImg"
+        android:layout_marginBottom="0dp" />
+
+    <Button
+        android:id="@+id/timePickButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Choisir"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/datePickButton"
+        android:onClick="showTimePickerDialog"
+        android:layout_marginRight="8dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/BackFab"
