--- a/mobile/src/main/res/layout/activity_creation.xml
+++ b/mobile/src/main/res/layout/activity_creation.xml
@@ -172,6 +172,19 @@
         android:onClick="showTimePickerDialog"
         android:layout_marginRight="8dp" />
 
+    <CheckBox
+        android:id="@+id/notifCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="8dp"
+        android:checked="true"
+        android:text="Notification"
+        app:layout_constraintBottom_toBottomOf="@+id/BackFab"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/BackFab" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/BackFab"
         android:layout_width="wrap_content"
