Started implementing saveActivity method and miscs

--- a/mobile/src/main/res/layout/activity_creation.xml
+++ b/mobile/src/main/res/layout/activity_creation.xml
@@ -35,10 +35,10 @@
         android:contentDescription=""/>
 
     <EditText
-        android:id="@+id/NameEdit"
+        android:id="@+id/nameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="33dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="33dp"
         android:layout_marginTop="30dp"
@@ -48,7 +48,8 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/AddTitle"
+        android:layout_marginEnd="8dp" />
 
     <ImageView
         android:id="@+id/typeImg"
@@ -56,7 +57,7 @@
         android:layout_height="41dp"
         app:srcCompat="@android:drawable/ic_menu_manage"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/NameEdit"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdit"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -65,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/NameEdit"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdit"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="8dp"
@@ -95,7 +96,9 @@
         app:layout_constraintHorizontal_bias="0.614"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <ImageView
         android:id="@+id/dateImg"
@@ -121,7 +124,9 @@
         app:layout_constraintHorizontal_bias="0.607"
         android:onClick="showDatePickerDialog"
         app:layout_constraintBottom_toBottomOf="@+id/dateImg"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/datePickButton"
@@ -158,7 +163,8 @@
         app:layout_constraintHorizontal_bias="0.626"
         android:onClick="showTimePickerDialog"
         app:layout_constraintBottom_toBottomOf="@+id/timeImg"
-        android:layout_marginBottom="0dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/timePickButton"
@@ -183,7 +189,8 @@
         android:text="Notification"
         app:layout_constraintBottom_toBottomOf="@+id/BackFab"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/BackFab" />
+        app:layout_constraintTop_toTopOf="@+id/BackFab"
+        android:layout_marginStart="37dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/BackFab"
