--- a/mobile/src/main/res/layout/activity_handheld_main.xml
+++ b/mobile/src/main/res/layout/activity_handheld_main.xml
@@ -23,21 +23,24 @@
             android:textStyle="italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/activList"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="22dp"
             app:layout_constraintBottom_toTopOf="@+id/fab"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AcceuilTextView"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/AcceuilTextView"
+            app:layout_constraintVertical_bias="0.0" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -51,7 +54,9 @@
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:srcCompat="@android:drawable/ic_input_add"
+            android:layout_marginEnd="8dp" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
