several things: now nice display of alarms now updating when click on the icon for notification working new "Search" editText on main activity (not working)

--- a/mobile/src/main/res/layout/alarm_layout.xml
+++ b/mobile/src/main/res/layout/alarm_layout.xml
@@ -3,65 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:onClick="modifyAlarm">
 
     <TextView
         android:id="@+id/textView_Id_alarm_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:text="id"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="id" />
 
     <TextView
         android:id="@+id/textView_Date_alarm_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="48dp"
-        tools:text="date"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_Title_alarm_layout"
+        android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="10dp"
+        android:text="TextView"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Title_alarm_layout"
+        tools:text="date" />
 
     <TextView
         android:id="@+id/textView_Type_alarm_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20sp"
-        tools:text="type"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="120dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="type" />
 
     <TextView
         android:id="@+id/textView_Title_alarm_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20sp"
-        tools:text="Titre"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        tools:text="Titre" />
 
     <ImageView
         android:id="@+id/imageView_notif_alarm_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginRight="31dp"
         android:layout_marginTop="24dp"
         android:adjustViewBounds="false"
         android:clickable="true"
+        android:contentDescription="alarmIcon"
+        android:scaleType="fitXY"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+        app:srcCompat="@drawable/alarm_grey" />
 </android.support.constraint.ConstraintLayout>
