--- a/mobile/src/main/res/layout/activity_handheld_main.xml
+++ b/mobile/src/main/res/layout/activity_handheld_main.xml
@@ -56,6 +56,31 @@
             app:srcCompat="@android:drawable/ic_input_add"
             android:layout_marginEnd="8dp" />
 
+        <EditText
+            android:id="@+id/editText_Search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:hint="Rechercher"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toBottomOf="@+id/fab"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/imageView_Search"
+            app:layout_constraintRight_toLeftOf="@+id/fab" />
+
+        <ImageView
+            android:id="@+id/imageView_Search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_search"
+            app:layout_constraintBottom_toBottomOf="@+id/editText_Search"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
