--- a/mobile/src/main/res/layout/alarm_layout.xml
+++ b/mobile/src/main/res/layout/alarm_layout.xml
@@ -59,8 +59,8 @@
         android:id="@+id/imageView_notif_alarm_layout"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginRight="31dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginTop="12dp"
         android:adjustViewBounds="false"
         android:clickable="true"
         android:contentDescription="alarmIcon"
@@ -68,4 +68,39 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/alarm_grey" />
+
+    <TextView
+        android:id="@+id/text_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Date_alarm_layout" />
+
+    <Button
+        android:id="@+id/button_delete"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@android:drawable/ic_delete"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_notif_alarm_layout" />
+
+    <Button
+        android:id="@+id/button_edit"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@android:drawable/ic_menu_edit"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_notif_alarm_layout"
+        app:layout_constraintRight_toLeftOf="@+id/button_delete"
+        android:layout_marginRight="13dp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_delete"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
+
 </android.support.constraint.ConstraintLayout>
