add searching possibility through the alarms

--- a/mobile/src/main/res/layout/activity_creation.xml
+++ b/mobile/src/main/res/layout/activity_creation.xml
@@ -115,18 +115,18 @@
         android:id="@+id/dateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Date"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/dateImg"
-        app:layout_constraintRight_toLeftOf="@+id/datePickButton"
-        app:layout_constraintHorizontal_bias="0.607"
-        android:onClick="showDatePickerDialog"
-        app:layout_constraintBottom_toBottomOf="@+id/dateImg"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:onClick="showDatePickerDialog"
+        android:textSize="18sp"
+        android:hint="Date"
+        app:layout_constraintBottom_toBottomOf="@+id/dateImg"
+        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintLeft_toRightOf="@+id/dateImg"
+        app:layout_constraintRight_toLeftOf="@+id/datePickButton" />
 
     <Button
         android:id="@+id/datePickButton"
@@ -154,17 +154,17 @@
         android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Heure"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/timePickButton"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/timeImg"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.626"
-        android:onClick="showTimePickerDialog"
-        app:layout_constraintBottom_toBottomOf="@+id/timeImg"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:onClick="showTimePickerDialog"
+        android:textSize="18sp"
+        android:hint="Heure"
+        app:layout_constraintBottom_toBottomOf="@+id/timeImg"
+        app:layout_constraintHorizontal_bias="0.626"
+        app:layout_constraintLeft_toRightOf="@+id/timeImg"
+        app:layout_constraintRight_toLeftOf="@+id/timePickButton" />
 
     <Button
         android:id="@+id/timePickButton"
