--- a/mobile/src/main/res/layout/alarm_layout.xml
+++ b/mobile/src/main/res/layout/alarm_layout.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textSize="12sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="id" />
